changes in all files

--- a/index1.css
+++ b/index1.css
@@ -3,6 +3,7 @@
 <body>
 
 <h3 style="color:Tomato;">Hello World</h3>
-<p>Toddy is earth day!!</p>
+<p>Today is earth day!!</p>
+<p>Environment Day!!</p>
 </body>
 </html>
